--- a/manga_db/webGUI/static/style.css
+++ b/manga_db/webGUI/static/style.css
@@ -33,6 +33,10 @@ h3              { color: #22a7f0; }
 .ext-info-data {
     display: table-cell;
 }
+.edit-book-info {
+	vertical-align: middle;
+	display: table-cell;
+}
 .pink-color{background-color: #a233a5 !important} /* #a72aaa */
 .star-inactive {
     color: #fff !important;
