--- a/manga_db/webGUI/templates/layout.html
+++ b/manga_db/webGUI/templates/layout.html
@@ -1,6 +1,6 @@
 <!doctype html>
-{% if book_info %}
-<title>{{ book_info.title_eng + ' - MangaDB' }}</title>
+{% if book %}
+<title>{{ book.title + ' - MangaDB' }}</title>
 {% else %}
 <title>MangaDB</title>
 {% endif %}
@@ -10,8 +10,10 @@
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='tsucss.css') }}">
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
 {# src https://appelsiini.net/projects/lazyload or https://github.com/tuupola/jquery_lazyload/tree/2.x #}
+<script type="text/javascript" src="{{ url_for('static', filename='jquery-3.3.1.min.js') }}"></script>
 <script src="{{ url_for('static', filename='lazyload.js') }}"></script>
 {# <script src="{{ url_for('static', filename='bootstrap.min.js') }}"></script> #}
+{% block static_additional %}{% endblock %}
 
 <div class=page>
 	<h1><a href="/" id="title-anchor">MangaDB</a></h1>
