fixed alter script(rating could have non-decimal vals, name clash when renaming) made package executable with __main__ logging re-activated export to csv working importing books in webgui and jumping works buttons working except write info

--- a/manga_db/webGUI/static/style.css
+++ b/manga_db/webGUI/static/style.css
@@ -43,6 +43,12 @@ h3              { color: #22a7f0; }
 	vertical-align: middle;
 	display: table-cell;
 }
+.choose-book-info-container {
+	font-family: 'Open Sans',sans-serif;
+        color: #fff;
+        display: table;
+        border-collapse: separate;
+}
 .pink-color{background-color: #a233a5 !important} /* #a72aaa */
 .star-inactive {
     color: #fff !important;
