--- a/manga_db/webGUI/templates/layout.html
+++ b/manga_db/webGUI/templates/layout.html
@@ -26,7 +26,7 @@
 <div class="jump-book-container">
     <form action="{{ url_for('jump_to_book_by_url') }}" method=post class="search-tags">
 	<div class="container-align-left" id="jump-url-field-container">
-	<input value="" type=text name="jump-to-url" class="data-search" id="jumpURL">
+	<input value="" type=text name="ext-url" class="data-search" id="jumpURL">
 	</div>
 	<div class="container-align-right" id="jump-url-btn-container">
 	<button type="submit" id="jump-book-btn" class="book-read-button button-stack red-color">
