--- a/manga_db/webGUI/templates/edit_info.html
+++ b/manga_db/webGUI/templates/edit_info.html
@@ -6,19 +6,19 @@
 <div class="book-line">
 <div class="edit-book-info">English Title</div>
 <div class="book-data" id="EnglishTitle">
-	<input type="text" class="form-control" name="title_eng" id="EnglishTitle" value="{{ book.title_eng }}">
+	<input type="text" class="selectize-input" name="title_eng" id="EnglishTitle" value="{{ book.title_eng }}">
 </div>
 </div>
 <div class="book-line">
 <div class="edit-book-info">Foreign Title</div>
 <div class="book-data" id="ForeignTitle">
-	<input type="text" class="form-control" name="title_foreign" id="ForeignTitle" value="{{ book.title_foreign }}">
+	<input type="text" class="selectize-input" name="title_foreign" id="ForeignTitle" value="{{ book.title_foreign }}">
 </div>
 </div>
 <div class="book-line">
 <div class="edit-book-info">Pages</div>
 <div class="book-data" id="Pages">
-	<input required type="text" class="form-control" name="pages" id="Pages" value="{{ book.pages }}">
+	<input required type="text" class="selectize-input" name="pages" id="Pages" value="{{ book.pages }}">
 </div>
 </div>
 <div class="book-line">
@@ -35,7 +35,7 @@
 <div class="book-line">
 <div class="edit-book-info">My Rating</div>
 <div class="book-data" id="MyRating">
-	<input type="text" class="form-control" name="my_rating" value="{{ book.my_rating|float() if book.my_rating else '' }}" placeholder="Decimal rating from 0-5.0">
+	<input type="text" class="selectize-input" name="my_rating" value="{{ book.my_rating|float() if book.my_rating else '' }}" placeholder="Decimal rating from 0-5.0">
 </div>
 </div>
 <div class="book-line">
@@ -141,7 +141,7 @@
 <div class="edit-book-info">Note</div>
 <div class="book-data" id="Note">
 	{# only supposed to be a small note so no textarea(multi-line) field #}
-	<input type="text" class="form-control" name="note" id="Note" value="{{ book.note if book.note else '' }}">
+	<input type="text" class="selectize-input" name="note" id="Note" value="{{ book.note if book.note else '' }}">
 	{# <textarea name="note" id="Note" cols="40" rows="5">{{ book.note if book.note else '' }}</textarea> #}
 </div>
 </div>
