--- a/manga_db/webGUI/templates/book.html
+++ b/manga_db/webGUI/templates/book.html
@@ -2,7 +2,7 @@
 {% block body %}
 
 <div id="rootContainer" class="container-fluid">
-<div style="margin: 5px auto;"></div>
+{% block book_changes %}{% endblock %}
 {% if book %}
 <div class="book-page-container">
 	<div class="row row-no-margin">
