link to main book page on external link

--- a/manga_db/webGUI/templates/show_info.html
+++ b/manga_db/webGUI/templates/show_info.html
@@ -355,7 +355,7 @@ BACK TO INDEX
 <div id="ext-info">
 <div class="row row-no-margin">
 	<div>
-	<div class="ext-info-title" style="display:inline-block;">External Link on {{ ext_info.site|capitalize() }}</div>
+	<div class="ext-info-title" style="display:inline-block;"><a href="{{ ext_info.url }}">External Link on {{ ext_info.site|capitalize() }}</a></div>
 	<div style="float:right;position:relative;top:5px;">Last Update: {{ ext_info.last_update }}</div>
 <hr>
 	</div>
