--- a/manga_db/webGUI/static/style.css
+++ b/manga_db/webGUI/static/style.css
@@ -1,5 +1,9 @@
 a, h1, h2       { color: #fff; underline: none }
 a               { text-decoration: none; }
+a:hover, a:visited, a:focus {
+    text-decoration: none;
+    color: #fff;
+}
 h1, h2          { font-family: 'Open Sans',sans-serif; margin: 0; }
 h1              { border-bottom: 2px solid #eee; margin-bottom: 1em;}
 h2              { font-size: 1.2em; }
